syntax = "proto3";
package rill.runtime.v1;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "rill/runtime/v1/export_format.proto";
import "rill/runtime/v1/expression.proto";
import "rill/runtime/v1/schema.proto";
import "rill/runtime/v1/time_grain.proto";
import "validate/validate.proto";

service QueryService {
  // Query runs a SQL query against the instance's OLAP datastore.
  rpc Query(QueryRequest) returns (QueryResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/query",
      body: "*"
    };
  }

  // Batch request with different queries
  rpc QueryBatch(QueryBatchRequest) returns (stream QueryBatchResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/query/batch",
      body: "*"
    };
  }

  // Export builds a URL to download the results of a query as a file.
  rpc Export(ExportRequest) returns (ExportResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/queries/export",
      body: "*"
    };
  }

  // Explore APIs

  // MetricsViewAggregation is a generic API for running group-by queries against a metrics view.
  rpc MetricsViewAggregation(MetricsViewAggregationRequest) returns (MetricsViewAggregationResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/queries/metrics-views/{metrics_view}/aggregation",
      body: "*"
    };
  }

  // MetricsViewToplist returns the top dimension values of a metrics view sorted by one or more measures.
  // It's a convenience API for querying a metrics view.
  rpc MetricsViewToplist(MetricsViewToplistRequest) returns (MetricsViewToplistResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/queries/metrics-views/{metrics_view_name}/toplist",
      body: "*"
    };
  }

  rpc MetricsViewComparison(MetricsViewComparisonRequest) returns (MetricsViewComparisonResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/queries/metrics-views/{metrics_view_name}/compare-toplist",
      body: "*"
    };
  }

  // MetricsViewTimeSeries returns time series for the measures in the metrics view.
  // It's a convenience API for querying a metrics view.
  rpc MetricsViewTimeSeries(MetricsViewTimeSeriesRequest) returns (MetricsViewTimeSeriesResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/queries/metrics-views/{metrics_view_name}/timeseries",
      body: "*"
    };
  }

  // MetricsViewTotals returns totals over a time period for the measures in a metrics view.
  // It's a convenience API for querying a metrics view.
  rpc MetricsViewTotals(MetricsViewTotalsRequest) returns (MetricsViewTotalsResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/queries/metrics-views/{metrics_view_name}/totals",
      body: "*"
    };
  }

  // MetricsViewRows returns the underlying model rows matching a metrics view time range and filter(s).
  rpc MetricsViewRows(MetricsViewRowsRequest) returns (MetricsViewRowsResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/queries/metrics-views/{metrics_view_name}/rows",
      body: "*"
    };
  }

  // MetricsViewTimeRange Get the time range summaries (min, max) for time column in a metrics view
  rpc MetricsViewTimeRange(MetricsViewTimeRangeRequest) returns (MetricsViewTimeRangeResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/queries/metrics-views/{metrics_view_name}/time-range-summary",
      body: "*"
    };
  }

  // MetricsViewSchema Get the data types of measures and dimensions
  rpc MetricsViewSchema(MetricsViewSchemaRequest) returns (MetricsViewSchemaResponse) {
    option (google.api.http) = {get: "/v1/instances/{instance_id}/queries/metrics-views/{metrics_view_name}/schema"};
  }

  // Profiling APIs

  // ColumnRollupInterval returns the minimum time granularity (as well as the time range) for a specified timestamp column
  rpc ColumnRollupInterval(ColumnRollupIntervalRequest) returns (ColumnRollupIntervalResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/queries/rollup-interval/tables/{table_name}",
      body: "*"
    };
  }

  // Get TopK elements from a table for a column given an agg function
  // agg function and k are optional, defaults are count(*) and 50 respectively
  rpc ColumnTopK(ColumnTopKRequest) returns (ColumnTopKResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/queries/topk/tables/{table_name}",
      body: "*"
    };
  }

  // Get the number of nulls in a column
  rpc ColumnNullCount(ColumnNullCountRequest) returns (ColumnNullCountResponse) {
    option (google.api.http) = {get: "/v1/instances/{instance_id}/queries/null-count/tables/{table_name}"};
  }

  // Get basic stats for a numeric column like min, max, mean, stddev, etc
  rpc ColumnDescriptiveStatistics(ColumnDescriptiveStatisticsRequest) returns (ColumnDescriptiveStatisticsResponse) {
    option (google.api.http) = {get: "/v1/instances/{instance_id}/queries/descriptive-statistics/tables/{table_name}"};
  }

  // Estimates the smallest time grain present in the column
  rpc ColumnTimeGrain(ColumnTimeGrainRequest) returns (ColumnTimeGrainResponse) {
    option (google.api.http) = {get: "/v1/instances/{instance_id}/queries/smallest-time-grain/tables/{table_name}"};
  }

  // Get the histogram for values in a column
  rpc ColumnNumericHistogram(ColumnNumericHistogramRequest) returns (ColumnNumericHistogramResponse) {
    option (google.api.http) = {get: "/v1/instances/{instance_id}/queries/numeric-histogram/tables/{table_name}"};
  }

  // Get outliers for a numeric column
  rpc ColumnRugHistogram(ColumnRugHistogramRequest) returns (ColumnRugHistogramResponse) {
    option (google.api.http) = {get: "/v1/instances/{instance_id}/queries/rug-histogram/tables/{table_name}"};
  }

  // Get the time range summaries (min, max) for a column
  rpc ColumnTimeRange(ColumnTimeRangeRequest) returns (ColumnTimeRangeResponse) {
    option (google.api.http) = {get: "/v1/instances/{instance_id}/queries/time-range-summary/tables/{table_name}"};
  }

  // Get cardinality for a column
  rpc ColumnCardinality(ColumnCardinalityRequest) returns (ColumnCardinalityResponse) {
    option (google.api.http) = {get: "/v1/instances/{instance_id}/queries/column-cardinality/tables/{table_name}"};
  }

  // Generate time series for the given measures (aggregation expressions) along with the sparkline timeseries
  rpc ColumnTimeSeries(ColumnTimeSeriesRequest) returns (ColumnTimeSeriesResponse) {
    option (google.api.http) = {
      post: "/v1/instances/{instance_id}/queries/timeseries/tables/{table_name}",
      body: "*"
    };
  }

  // Tablewide profiling APIs

  // TableCardinality returns row count
  rpc TableCardinality(TableCardinalityRequest) returns (TableCardinalityResponse) {
    option (google.api.http) = {get: "/v1/instances/{instance_id}/queries/table-cardinality/tables/{table_name}"};
  }

  // TableColumns returns column profiles
  rpc TableColumns(TableColumnsRequest) returns (TableColumnsResponse) {
    option (google.api.http) = {post: "/v1/instances/{instance_id}/queries/columns-profile/tables/{table_name}"};
  }

  // TableRows returns table rows
  rpc TableRows(TableRowsRequest) returns (TableRowsResponse) {
    option (google.api.http) = {get: "/v1/instances/{instance_id}/queries/rows/tables/{table_name}"};
  }
}

message QueryRequest {
  string instance_id = 1 [(validate.rules).string = {pattern: "^[_\\-a-zA-Z0-9]+$"}];
  string sql = 2;
  repeated google.protobuf.Value args = 3;
  int32 priority = 4;
  bool dry_run = 5;
  int32 limit = 6 [(validate.rules).int32 = {
    lte: 10000,
    gte: 0
  }];
}

message QueryResponse {
  StructType meta = 1;
  repeated google.protobuf.Struct data = 2;
}

message QueryBatchRequest {
  string instance_id = 1;
  repeated Query queries = 2;
}

message QueryBatchResponse {
  uint32 index = 1;
  QueryResult result = 2;
  string error = 3;
}

message ExportRequest {
  string instance_id = 1;
  int64 limit = 2;
  ExportFormat format = 3;
  Query query = 4;
  string baked_query = 5;
}

message ExportResponse {
  string download_url_path = 1;
}

// **********
// All queries
// **********

message Query {
  oneof query {
    MetricsViewAggregationRequest metrics_view_aggregation_request = 20;
    MetricsViewToplistRequest metrics_view_toplist_request = 2;
    MetricsViewComparisonRequest metrics_view_comparison_request = 3;
    MetricsViewTimeSeriesRequest metrics_view_time_series_request = 4;
    MetricsViewTotalsRequest metrics_view_totals_request = 5;
    MetricsViewRowsRequest metrics_view_rows_request = 6;
    ColumnRollupIntervalRequest column_rollup_interval_request = 7;
    ColumnTopKRequest column_top_k_request = 8;
    ColumnNullCountRequest column_null_count_request = 9;
    ColumnDescriptiveStatisticsRequest column_descriptive_statistics_request = 10;
    ColumnTimeGrainRequest column_time_grain_request = 11;
    ColumnNumericHistogramRequest column_numeric_histogram_request = 12;
    ColumnRugHistogramRequest column_rug_histogram_request = 13;
    ColumnTimeRangeRequest column_time_range_request = 14;
    ColumnCardinalityRequest column_cardinality_request = 15;
    ColumnTimeSeriesRequest column_time_series_request = 16;
    TableCardinalityRequest table_cardinality_request = 17;
    TableColumnsRequest table_columns_request = 18;
    TableRowsRequest table_rows_request = 19;
  }
}

message QueryResult {
  oneof result {
    MetricsViewAggregationResponse metrics_view_aggregation_response = 21;
    MetricsViewToplistResponse metrics_view_toplist_response = 3;
    MetricsViewComparisonResponse metrics_view_comparison_response = 4;
    MetricsViewTimeSeriesResponse metrics_view_time_series_response = 5;
    MetricsViewTotalsResponse metrics_view_totals_response = 6;
    MetricsViewRowsResponse metrics_view_rows_response = 7;
    ColumnRollupIntervalResponse column_rollup_interval_response = 8;
    ColumnTopKResponse column_top_k_response = 9;
    ColumnNullCountResponse column_null_count_response = 10;
    ColumnDescriptiveStatisticsResponse column_descriptive_statistics_response = 11;
    ColumnTimeGrainResponse column_time_grain_response = 12;
    ColumnNumericHistogramResponse column_numeric_histogram_response = 13;
    ColumnRugHistogramResponse column_rug_histogram_response = 14;
    ColumnTimeRangeResponse column_time_range_response = 15;
    ColumnCardinalityResponse column_cardinality_response = 16;
    ColumnTimeSeriesResponse column_time_series_response = 17;
    TableCardinalityResponse table_cardinality_response = 18;
    TableColumnsResponse table_columns_response = 19;
    TableRowsResponse table_rows_response = 20;
  }
}

// **********
// Metrics APIs
// **********

message MetricsViewAggregationRequest {
  string instance_id = 1;
  string metrics_view = 2 [(validate.rules).string.min_len = 1];
  repeated MetricsViewAggregationDimension dimensions = 3;
  repeated MetricsViewAggregationMeasure measures = 4;
  repeated MetricsViewAggregationSort sort = 5;
  TimeRange time_range = 12;
  google.protobuf.Timestamp time_start = 6; // Deprecated in favor of time_range
  google.protobuf.Timestamp time_end = 7; // Deprecated in favor of time_range
  repeated string pivot_on = 15;
  Expression where = 8;
  Expression having = 13;
  int64 limit = 9 [(validate.rules).int64.gte = 0];
  int64 offset = 10 [(validate.rules).int64.gte = 0];
  int32 priority = 11;
  MetricsViewFilter filter = 14; // Deprecated. should be removed once UI is moved to use new filters
}

message MetricsViewAggregationResponse {
  StructType schema = 1;
  repeated google.protobuf.Struct data = 2;
}

message MetricsViewAggregationDimension {
  string name = 1;
  TimeGrain time_grain = 2;
  string time_zone = 3;
  string alias = 4;
}

message MetricsViewAggregationMeasure {
  string name = 1;
  BuiltinMeasure builtin_measure = 2;
  repeated google.protobuf.Value builtin_measure_args = 3;
  Expression filter = 4;
}

message MetricsViewAggregationSort {
  string name = 1;
  bool desc = 2;
}

enum BuiltinMeasure {
  BUILTIN_MEASURE_UNSPECIFIED = 0;
  BUILTIN_MEASURE_COUNT = 1;
  BUILTIN_MEASURE_COUNT_DISTINCT = 2;
}

message MetricsViewToplistRequest {
  string instance_id = 1;
  string metrics_view_name = 2 [(validate.rules).string.min_len = 1];
  string dimension_name = 3 [(validate.rules).string.min_len = 1];
  repeated string measure_names = 4;
  repeated InlineMeasure inline_measures = 12;
  google.protobuf.Timestamp time_start = 5;
  google.protobuf.Timestamp time_end = 6;
  int64 limit = 7 [(validate.rules).int64.gte = 0];
  int64 offset = 8 [(validate.rules).int64.gte = 0];
  repeated MetricsViewSort sort = 9;
  Expression where = 10;
  Expression having = 13;
  int32 priority = 11;
  MetricsViewFilter filter = 14; // Deprecated. should be removed once UI is moved to use new filters
}

message MetricsViewToplistResponse {
  repeated MetricsViewColumn meta = 1;
  repeated google.protobuf.Struct data = 2;
}

// Request message for QueryService.MetricsViewComparison
message MetricsViewComparisonRequest {
  string instance_id = 1;
  string metrics_view_name = 2 [(validate.rules).string.min_len = 1];
  MetricsViewAggregationDimension dimension = 3;
  repeated MetricsViewAggregationMeasure measures = 4;
  repeated string comparison_measures = 16;
  repeated MetricsViewComparisonSort sort = 5;
  TimeRange time_range = 6;
  TimeRange comparison_time_range = 7;
  Expression where = 8;
  Expression having = 12;
  repeated MetricsViewComparisonMeasureAlias aliases = 15;
  int64 limit = 9 [(validate.rules).int64.gte = 0];
  int64 offset = 10 [(validate.rules).int64.gte = 0];
  int32 priority = 11;
  bool exact = 13;
  MetricsViewFilter filter = 14; // Deprecated. should be removed once UI is moved to use new filters
}

// Response message for QueryService.MetricsViewComparison
message MetricsViewComparisonResponse {
  repeated MetricsViewComparisonRow rows = 1;
}

message TimeRange {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
  string iso_duration = 3;
  string iso_offset = 4;
  TimeGrain round_to_grain = 5;
  string time_zone = 6;
}

// Present for backwards compatibility
enum MetricsViewComparisonSortType {
  METRICS_VIEW_COMPARISON_SORT_TYPE_UNSPECIFIED = 0;
  METRICS_VIEW_COMPARISON_SORT_TYPE_BASE_VALUE = 1;
  METRICS_VIEW_COMPARISON_SORT_TYPE_COMPARISON_VALUE = 2;
  METRICS_VIEW_COMPARISON_SORT_TYPE_ABS_DELTA = 3;
  METRICS_VIEW_COMPARISON_SORT_TYPE_REL_DELTA = 4;
}

enum MetricsViewComparisonMeasureType {
  METRICS_VIEW_COMPARISON_MEASURE_TYPE_UNSPECIFIED = 0;
  METRICS_VIEW_COMPARISON_MEASURE_TYPE_BASE_VALUE = 1;
  METRICS_VIEW_COMPARISON_MEASURE_TYPE_COMPARISON_VALUE = 2;
  METRICS_VIEW_COMPARISON_MEASURE_TYPE_ABS_DELTA = 3;
  METRICS_VIEW_COMPARISON_MEASURE_TYPE_REL_DELTA = 4;
}

message MetricsViewComparisonSort {
  string name = 1 [(validate.rules).string.min_len = 1];
  bool desc = 2;
  MetricsViewComparisonSortType type = 3; // Deprecated. Present for backwards compatibility for older reports
  MetricsViewComparisonMeasureType sort_type = 4;
}

message MetricsViewComparisonRow {
  google.protobuf.Value dimension_value = 1;
  repeated MetricsViewComparisonValue measure_values = 2;
}

message MetricsViewComparisonValue {
  string measure_name = 1;
  google.protobuf.Value base_value = 2;
  google.protobuf.Value comparison_value = 3;
  google.protobuf.Value delta_abs = 4;
  google.protobuf.Value delta_rel = 5;
}

message MetricsViewComparisonMeasureAlias {
  string name = 1;
  MetricsViewComparisonMeasureType type = 2;
  string alias = 3;
}

message MetricsViewTimeSeriesRequest {
  string instance_id = 1;
  string metrics_view_name = 2 [(validate.rules).string.min_len = 1];
  repeated string measure_names = 3 [(validate.rules).repeated.min_items = 1];
  repeated InlineMeasure inline_measures = 9;
  google.protobuf.Timestamp time_start = 4;
  google.protobuf.Timestamp time_end = 5;
  TimeGrain time_granularity = 6 [(validate.rules).enum = {
    not_in: [0]
  }];
  Expression where = 7;
  Expression having = 11;
  string time_zone = 10;
  int32 priority = 8;
  MetricsViewFilter filter = 12; // Deprecated. should be removed once UI is moved to use new filters
}

message MetricsViewTimeSeriesResponse {
  repeated MetricsViewColumn meta = 1;
  repeated TimeSeriesValue data = 2;
}

message MetricsViewTotalsRequest {
  string instance_id = 1;
  string metrics_view_name = 2 [(validate.rules).string.min_len = 1];
  repeated string measure_names = 3 [(validate.rules).repeated.min_items = 1];
  repeated InlineMeasure inline_measures = 9;
  google.protobuf.Timestamp time_start = 4;
  google.protobuf.Timestamp time_end = 5;
  Expression where = 7;
  int32 priority = 8;
  MetricsViewFilter filter = 10; // Deprecated. should be removed once UI is moved to use new filters
}

message MetricsViewTotalsResponse {
  repeated MetricsViewColumn meta = 1;
  google.protobuf.Struct data = 2;
}

message MetricsViewRowsRequest {
  string instance_id = 1;
  string metrics_view_name = 2 [(validate.rules).string.min_len = 1];
  google.protobuf.Timestamp time_start = 3;
  google.protobuf.Timestamp time_end = 4;
  TimeGrain time_granularity = 10;
  Expression where = 5;
  repeated MetricsViewSort sort = 6;
  int32 limit = 7 [(validate.rules).int32.gte = 0];
  int64 offset = 8 [(validate.rules).int64.gte = 0];
  int32 priority = 9;
  string time_zone = 11;
  MetricsViewFilter filter = 12; // Deprecated. should be removed once UI is moved to use new filters
}

message MetricsViewRowsResponse {
  repeated MetricsViewColumn meta = 1;
  repeated google.protobuf.Struct data = 2;
}

message MetricsViewSort {
  string name = 1 [(validate.rules).string.min_len = 1];
  bool ascending = 2;
}

message MetricsViewFilter {
  message Cond {
    string name = 1;
    repeated google.protobuf.Value in = 2;
    repeated string like = 3;
  }
  repeated Cond include = 2;
  repeated Cond exclude = 3;
}

message MetricsViewColumn {
  string name = 1;
  string type = 2;
  bool nullable = 3;
}

message InlineMeasure {
  string name = 1 [(validate.rules).string.min_len = 1];
  string expression = 2 [(validate.rules).string.min_len = 1];
}

message MetricsViewTimeRangeRequest {
  string instance_id = 1;
  string metrics_view_name = 2 [(validate.rules).string.min_len = 1];
  int32 priority = 3;
}

message MetricsViewTimeRangeResponse {
  TimeRangeSummary time_range_summary = 1;
}

message MetricsViewSchemaRequest {
  string instance_id = 1;
  string metrics_view_name = 2 [(validate.rules).string.min_len = 1];
  int32 priority = 3;
}

message MetricsViewSchemaResponse {
  StructType schema = 1;
}

// **********
// Profiling APIs
// **********

message ColumnRollupIntervalRequest {
  string instance_id = 1;
  string table_name = 2 [(validate.rules).string.min_len = 1];
  string column_name = 3 [(validate.rules).string.min_len = 1];
  int32 priority = 4;
}

message ColumnRollupIntervalResponse {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
  TimeGrain interval = 3;
}

message ColumnTopKRequest {
  string instance_id = 1;
  string table_name = 2 [(validate.rules).string.min_len = 1];
  string column_name = 3 [(validate.rules).string.min_len = 1];
  string agg = 4; // default is count(*)
  int32 k = 5; // default is 50
  int32 priority = 6;
}

message ColumnTopKResponse {
  CategoricalSummary categorical_summary = 1;
}

message CategoricalSummary {
  oneof case {
    TopK top_k = 1;
    double cardinality = 2;
  }
}

message TopK {
  repeated Entry entries = 1;
  message Entry {
    google.protobuf.Value value = 1;
    double count = 2;
  }
}

message ColumnNullCountRequest {
  string instance_id = 1;
  string table_name = 2 [(validate.rules).string.min_len = 1];
  string column_name = 3 [(validate.rules).string.min_len = 1];
  int32 priority = 4;
}

message ColumnNullCountResponse {
  double count = 1;
}

message ColumnDescriptiveStatisticsRequest {
  string instance_id = 1;
  string table_name = 2 [(validate.rules).string.min_len = 1];
  string column_name = 3 [(validate.rules).string.min_len = 1];
  int32 priority = 4;
}

message ColumnDescriptiveStatisticsResponse {
  NumericSummary numeric_summary = 1;
}

message NumericSummary {
  oneof case {
    NumericHistogramBins numeric_histogram_bins = 1;
    NumericStatistics numeric_statistics = 2;
    NumericOutliers numeric_outliers = 3;
  }
}

message NumericHistogramBins {
  message Bin {
    int32 bucket = 1;
    double low = 2;
    double midpoint = 3;
    double high = 4;
    double count = 5;
  }
  repeated Bin bins = 1;
}

message NumericStatistics {
  double min = 1;
  double max = 2;
  double mean = 3;
  double q25 = 4;
  double q50 = 5;
  double q75 = 6;
  double sd = 7;
}

message NumericOutliers {
  message Outlier {
    int32 bucket = 1;
    double low = 2;
    double high = 3;
    bool present = 4;
    int32 count = 5;
  }
  repeated Outlier outliers = 1;
}

message ColumnTimeGrainRequest {
  string instance_id = 1;
  string table_name = 2 [(validate.rules).string.min_len = 1];
  string column_name = 3 [(validate.rules).string.min_len = 1];
  int32 priority = 4;
}

message ColumnTimeGrainResponse {
  TimeGrain time_grain = 1;
}

message ColumnNumericHistogramRequest {
  string instance_id = 1;
  string table_name = 2 [(validate.rules).string.min_len = 1];
  string column_name = 3 [(validate.rules).string.min_len = 1];
  HistogramMethod histogram_method = 4;
  int32 priority = 5;
}

message ColumnNumericHistogramResponse {
  NumericSummary numeric_summary = 1;
}

enum HistogramMethod {
  HISTOGRAM_METHOD_UNSPECIFIED = 0;
  HISTOGRAM_METHOD_FD = 1;
  HISTOGRAM_METHOD_DIAGNOSTIC = 2;
}

message ColumnRugHistogramRequest {
  string instance_id = 1;
  string table_name = 2 [(validate.rules).string.min_len = 1];
  string column_name = 3 [(validate.rules).string.min_len = 1];
  int32 priority = 4;
}

message ColumnRugHistogramResponse {
  NumericSummary numeric_summary = 1;
}

message ColumnTimeRangeRequest {
  string instance_id = 1;
  string table_name = 2 [(validate.rules).string.min_len = 1];
  string column_name = 3 [(validate.rules).string.min_len = 1];
  int32 priority = 4;
}

message ColumnTimeRangeResponse {
  TimeRangeSummary time_range_summary = 1;
}

message TimeRangeSummary {
  google.protobuf.Timestamp min = 1;
  google.protobuf.Timestamp max = 2;
  message Interval {
    int32 months = 1;
    int32 days = 2;
    int64 micros = 3;
  }
  Interval interval = 3;
}

message ColumnCardinalityRequest {
  string instance_id = 1;
  string table_name = 2 [(validate.rules).string.min_len = 1];
  string column_name = 3 [(validate.rules).string.min_len = 1];
  int32 priority = 4;
}

message ColumnCardinalityResponse {
  CategoricalSummary categorical_summary = 1;
}

message ColumnTimeSeriesRequest {
  string instance_id = 1;
  string table_name = 2 [(validate.rules).string.min_len = 1];
  repeated BasicMeasure measures = 3 [(validate.rules).repeated.min_items = 1];
  string timestamp_column_name = 4 [(validate.rules).string.min_len = 1];
  TimeSeriesTimeRange time_range = 5;
  int32 pixels = 7 [(validate.rules).int32.gte = 0];
  int32 sample_size = 8 [(validate.rules).int32.gte = 0];
  int32 priority = 9;
  string time_zone = 10;
  message BasicMeasure {
    string id = 1;
    // mandatory user defined metadata
    string expression = 2 [(validate.rules).string.min_len = 1];
    // optional user defined metadata
    string sql_name = 3;
  }
}

message ColumnTimeSeriesResponse {
  TimeSeriesResponse rollup = 1;
}

message TimeSeriesTimeRange {
  google.protobuf.Timestamp start = 2;
  google.protobuf.Timestamp end = 3;
  TimeGrain interval = 4 [(validate.rules).enum.defined_only = true];
}

message TimeSeriesResponse {
  repeated TimeSeriesValue results = 1;
  repeated TimeSeriesValue spark = 2;
  int32 sample_size = 4;
}

message TimeSeriesValue {
  google.protobuf.Timestamp ts = 1;
  double bin = 2;
  google.protobuf.Struct records = 3;
}

// **********
// Tablewide profiling API
// **********

message TableCardinalityRequest {
  string instance_id = 1;
  string table_name = 2 [(validate.rules).string.min_len = 1];
  int32 priority = 3;
}

message TableCardinalityResponse {
  int64 cardinality = 1;
}

message TableColumnsRequest {
  string instance_id = 1;
  string table_name = 2 [(validate.rules).string.min_len = 1];
  int32 priority = 3;
}

message TableColumnsResponse {
  repeated ProfileColumn profile_columns = 1;
}

message ProfileColumn {
  string name = 1;
  string type = 2;
  int32 largest_string_length = 3;
}

message TableRowsRequest {
  string instance_id = 1;
  string table_name = 2 [(validate.rules).string.min_len = 1];
  int32 limit = 3 [(validate.rules).int32.gte = 0];
  int32 priority = 4;
}

message TableRowsResponse {
  repeated google.protobuf.Struct data = 1;
}
